--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         *{margin:0;padding:0}
+        p,div,section,header,footer,article,main,li{word-break:break-word}
         header,footer{background:#252525;color:#fff;display:flex;align-content:flex-end;padding:1rem}
         main{margin:1rem auto;width:800px;}
-        main>div, main>section{margin:.5rem auto;padding:1rem;box-shadow:0 1px 1px 2px rgba(0,0,0,.15);border-radius:8px;}
-        .section__header{display:flex;justify-content:space-between;}
+        main>section{margin:.5rem auto;padding:1rem;}
+        .info-section, article{margin:.5rem auto;padding:1rem;box-shadow:0 1px 1px 2px rgba(0,0,0,.15);
+        border-radius:8px;}
+        .tl-section{display:flex;flex-wrap:wrap}
+        .article{width:44%}
+        .article__header{display:flex;justify-content:space-between;}
+        .article__body{max-height:25rem;overflow:scroll}
         address{font-style:normal}
     </style>
 </head>
@@ -20,20 +26,22 @@
     <main>
         <section class="info-section">
             <h3>Hello [[${vo.name}]]</h3>
-            <p>생일: <time th:datetime="${vo.birth}"></time></p>
+            <p>birth: <time th:datetime="${vo.birth}"></time></p>
         </section>
-        <th:block th:each="board: ${list}">
-            <section>
-                <div class="section__header">
-                    <h4 th:text="${board.title}"></h4>
-                    <time th:datetime="${board.regdate}"></time>
-                </div>
-                <p th:text="${board.description}"></p>
-            </section>
-        </th:block>
+        <section class="tl-section">
+            <th:block th:each="board: ${list}">
+                <article class="article">
+                    <div class="article__header">
+                        <h4 th:text="${board.title}"></h4>
+                        <time th:datetime="${board.regdate}"></time>
+                    </div>
+                    <p class="article__body" th:text="${board.description}"></p>
+                </article>
+            </th:block>
+        </section>
     </main>
     <footer>
-        <address>copyright [[${vo.name}]] all right reversed.</address>
+        <address>copyright © [[${vo.name}]] all right reversed.</address>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script>
